Bug 166633 - The context menu for the text box is incorrect
Summary: The context menu for the text box is incorrect
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:26.2.0 target:25...
Keywords: bibisected, bisected, regression
: 166636 167458 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-19 03:28 UTC by nobu
Modified: 2025-07-17 09:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-05-19 03:28:06 UTC
Description:
The context menu for the text box is incorrect.

Steps to Reproduce:
1. Open new Calc.
2. Insert new TextBox, and Insert some Text (ex "a").
3. Select TextBox.
4. Open Context menu.
   ex. Right-Click , Shift + F10, Context Button(Windows)

Actual Results:
5. Opens the same context menu as when you select Cell.

Expected Results:
5. You will probably open the same context menu as when you selected Shape.


Reproducible: Always


User Profile Reset: No

Additional Info:

The sidebar properties seem to be working correctly.

---
Not reproducible with
[2025-05-05]
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cb149972d5fc82f3ca8009c3e51931c8d94ee664
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible with
[2025-05-17]
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 94231af057db7871fb993582e2015c0fa21dde46
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 Saburo 2025-05-19 03:50:47 UTC
I confirmed. and bisected.
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7e15c704cedf1ca77b3ebe8b3b60f6a1ad57deb0
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

author	Balazs Varga
commit 7e15c704cedf1ca77b3ebe8b3b60f6a1ad57deb0

tdf#166481 sc shapes edit view: fix wrong draw view shell
was created when an object was in rotation drag mode and we
enter into the shape to text edit mode.
We only need to switch to draw shell if we have not already
created a text shell for text edit mode.

TODO: unit/UI tests would be useful for the original enhancement.
(c628a26cd3f763b39a2e2441fc766dabf04ed492)

Follow-up commit of c628a26cd3f763b39a2e2441fc766dabf04ed492 677e40c8b83b06ded8e06b6151f71686baf5f6b5

Regression from commit: c628a26cd3f763b39a2e2441fc766dabf04ed492
(tdf#90293 switch draw selection to rotate mode)

Change-Id: Ib857673b1f5469d6502736ecad84fe046f8c967e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185031
Comment 2 nobu 2025-05-19 04:04:46 UTC
Thank you, Saburo-san.

---
Additional Information:
Right after starting Calc, the sidebar properties do not seem to work correctly when the text box is selected.
Comment 3 Buovjaga 2025-05-19 04:45:29 UTC
Remember to add the commit author to Cc after bibisecting.
Comment 4 Commit Notification 2025-05-22 08:54:02 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/29edbf28fc3135ccc6d84f9484df939c5f891746

tdf#166633 - sc fix wrong context menu for text boxes

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Balázs Varga 2025-05-22 08:56:12 UTC
*** Bug 166636 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2025-06-17 22:18:35 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf339d5f79551dec606e4872d2bb0307be382080

Related: tdf#166633 - sc fix wrong context menu for textboxes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-18 08:24:18 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/71dfc16dae3232024242e7d3c009a34a51f411a6

Related: tdf#166633 - sc fix wrong context menu for textboxes

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 nobu 2025-07-08 07:53:41 UTC
This bug also occurs in version 25.2.

Reproducible with
Version: 25.2.5.1 (X86_64) / LibreOffice Community
Build ID: 484541f705153d4ff78284873b0153c3e5a280db
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

https://ask.libreoffice.org/t/textbox-can-create-but-not-modify/124129
Comment 9 Buovjaga 2025-07-16 19:06:47 UTC
*** Bug 167458 has been marked as a duplicate of this bug. ***
Comment 10 Buovjaga 2025-07-16 19:07:08 UTC
(In reply to nobu from comment #8)
> This bug also occurs in version 25.2.
> 
> Reproducible with
> Version: 25.2.5.1 (X86_64) / LibreOffice Community
> Build ID: 484541f705153d4ff78284873b0153c3e5a280db
> CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render:
> Skia/Raster; VCL: win
> Locale: en-US (ja_JP); UI: en-US
> Calc: CL threaded
> 
> https://ask.libreoffice.org/t/textbox-can-create-but-not-modify/124129

https://gerrit.libreoffice.org/c/core/+/187976
Comment 11 Commit Notification 2025-07-17 07:55:25 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/2175b5a92c75253db70472c0ece596a850d0be1e

tdf#166633 - sc fix wrong context menu for text boxes

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-07-17 09:15:39 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/be12f228ff0cdf34f5821829047ef898e9feabfa

Related: tdf#166633 - sc fix wrong context menu for textboxes

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.