tdf#166633 - sc fix wrong context menu for text boxes

Handle separately text SdrObjs from not text SdrObjs
because when we create a new text object we also set
in edit mode automatically.

regression from commit: 7e15c704cedf1ca77b3ebe8b3b60f6a1ad57deb0
(tdf#166481 sc shapes edit view: fix wrong draw view shell)

Change-Id: I4887c5f24a277fbbf01b4449148f3934b043220b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185618
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins